@@ -37,19 +37,11 @@ object Settings {
       ScalacOptions.other("--preview"),
       ScalacOptions.other("-old-syntax"),
       ScalacOptions.other("-Wunused:all"),
+      ScalacOptions.other("-Wconf:src=.*html&msg=unused import:s"),
     ),
     Test / tpolecatScalacOptions ++= Set(
       ignoreNotUsedAssertion,
       discardNonUnitAssertion,
     ),
-  )
-
-  lazy val JavaOptions = javaOptions ++= Seq(
-    "-Xmx2G",
-    "-XX:+UseZGC",
-    "-XX:+ZGenerational",
-    "-XX:+IgnoreUnrecognizedVMOptions",
-    "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.util=ALL-UNNAMED",
   )
 }
